fix(Tags): tags page flex-wrap

--- a/src/app/main/blog/post/post.component.scss
+++ b/src/app/main/blog/post/post.component.scss
@@ -173,6 +173,7 @@ article {
     overflow: visible;
     padding: 0.5rem;
     border-radius: 3px;
+    overflow: inherit;
   }
 
   ol li {
